Vector/test/init/listInitUnboundedRange.chpl
private use ListNG;

config const testIters = 8;

const r = 1..;

var lst = new listng(r);

